trip crud
